tests/lit/tcheck/funcall00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2025-2025 Intel Corporation

function F(x : Integer, y : Integer := 0, z : Integer);

function main() -> Integer
begin
    F(0, y=>1, 2);
    // CHECK: Type error: positional argument occurs after a named argument
end
